<resources>
    <string name="app_name">SNEAKERSHIP</string>
    <string name="popular">Popular</string>
    <string name="sort_by">Sort by</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="added_to_cart">added to cart</string>
    <string name="search">Search</string>
    <string name="sort_default">Default</string>
    <string name="sort_price_low_to_high">Low to high</string>
    <string name="no_sneakers_found">No sneakers found</string>
    <string name="sort_price_high_to_low">High to low</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_details">Order Details</string>
    <string name="sub_total">Subtotal: $</string>
    <string name="taxes_and_charges">Taxes and Charges: $</string>
    <string name="checkout">$ Check Out</string>
    <string name="total_55">Total:</string>
    <string name="removed_from_cart">removed from cart</string>
    <string name="order_placed">Order placed</string>
    <string name="add_items_to_check_out">Please add items to checkout</string>
    <string name="total">Total: </string>
    <string name="price">Price: </string>
    <string name="add_to_cart">Add to cart</string>
    <string name="colour">Colour: </string>
    <string name="size">Size (uk): </string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>